WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47057
ASSERT(m_state = Open); is bad news bears
https://bugs.webkit.org/show_bug.cgi?id=47057
Summary
ASSERT(m_state = Open); is bad news bears
Adam Barth
Reported
2010-10-03 02:15:31 PDT
ASSERT(m_state = Open); is bad news bears
Attachments
Patch
(1.28 KB, patch)
2010-10-03 02:16 PDT
,
Adam Barth
zecke
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2010-10-03 02:16:59 PDT
Created
attachment 69586
[details]
Patch
Holger Freyther
Comment 2
2010-10-03 02:20:11 PDT
Comment on
attachment 69586
[details]
Patch With gcc 4.5 would write a plugin to inspect basic blocks for ASSERTs... Good catch!!!!
Adam Barth
Comment 3
2010-10-03 02:22:59 PDT
Committed
r68986
: <
http://trac.webkit.org/changeset/68986
>
Darin Adler
Comment 4
2010-10-03 10:33:08 PDT
Good to fix, but nearly harmless; the effect is local to the assertion. In a debug build we simply lose the assertion; but if the assertion was true then the statement has no effect. In a release build the expression is not even compiled.
Adam Barth
Comment 5
2010-10-03 11:19:16 PDT
Sure, but the bad case is if the assertion is false. Then the statement masks the problem in Debug builds, but Release builds behave differently.
Alexey Proskuryakov
Comment 6
2010-10-03 11:46:21 PDT
Good catch!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug