third_party/WebKit/WebCore/platform/network/cf/SocketStreamHandleCFNet.cpp
@@ -566,7 +566,7 @@ void SocketStreamHandle::writeStreamCallback(CFStreamEventType type)
             break;
         }
 
-        ASSERT(m_state = Open);
+        ASSERT(m_state == Open);
         ASSERT(m_connectingSubstate == Connected);
 
         sendPendingData();
